# mlops

./: .gitignore  README.md  edgedb.ipynb  id.ipynb  mlops.ipynb  pyproject.toml  redis.ipynb  rusty.ipynb  surrealdb.ipynb  test.ipynb
data/crypto/: crypto.parquet
data/misc/: nairafx.csv
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql
notebooks/: analysis.ipynb  edgedb.ipynb  id.ipynb  mlops.ipynb  surrealdb.ipynb  turso.ipynb  visualisation.ipynb
