[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Pepeye <Pepeye@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.0.7"
plotly = "^5.17.0"
polars = "^0.19.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
